[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/zylann.translation_editor/tools/extractor_dialog.gd" type="Script" id=1]

[node name="ExtractorDialog" type="WindowDialog"]
margin_left = 54.0
margin_top = 68.0
margin_right = 694.0
margin_bottom = 548.0
rect_min_size = Vector2( 640, 480 )
window_title = "String extractor"
resizable = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 624.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 29.0
margin_bottom = 19.0
text = "Root"

[node name="RootPathEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 33.0
margin_right = 624.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "res://"

[node name="Options" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 624.0
margin_bottom = 52.0

[node name="ExcludedDirsLabel" type="Label" parent="VBoxContainer/Options"]
margin_top = 5.0
margin_right = 122.0
margin_bottom = 19.0
text = "Ignored directories"

[node name="ExcludedDirsEdit" type="LineEdit" parent="VBoxContainer/Options"]
margin_left = 126.0
margin_right = 624.0
margin_bottom = 24.0
hint_tooltip = "Directories seperated by semicolons `;`"
size_flags_horizontal = 3
text = "addons"

[node name="StatusBar" type="Control" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 624.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 24 )

[node name="SummaryLabel" type="Label" parent="VBoxContainer/StatusBar"]
margin_top = 4.0
margin_right = 624.0
margin_bottom = 18.0
align = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/StatusBar"]
visible = false
margin_right = 624.0
margin_bottom = 16.0
step = 1.0

[node name="Results" type="Tree" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 624.0
margin_bottom = 416.0
size_flags_vertical = 3
hide_root = true
select_mode = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_top = 420.0
margin_right = 624.0
margin_bottom = 428.0
rect_min_size = Vector2( 0, 8 )

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 432.0
margin_right = 624.0
margin_bottom = 452.0
custom_constants/separation = 16
alignment = 1

[node name="ExtractButton" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 184.0
margin_right = 239.0
margin_bottom = 20.0
text = "Extract"

[node name="ImportButton" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 255.0
margin_right = 370.0
margin_bottom = 20.0
disabled = true
text = "Import selected"

[node name="CancelButton" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 386.0
margin_right = 440.0
margin_bottom = 20.0
text = "Cancel"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
margin_top = 456.0
margin_right = 624.0
margin_bottom = 464.0
rect_min_size = Vector2( 0, 8 )
[connection signal="pressed" from="VBoxContainer/Buttons/ExtractButton" to="." method="_on_ExtractButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/ImportButton" to="." method="_on_ImportButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/CancelButton" to="." method="_on_CancelButton_pressed"]
